--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ httpx = "^0.27.0"
 pandasai = "^2.2.14"
 numpy = "1.26.4"
 pyyaml = "^6.0.2"
+sqlalchemy = "^2.0.32"
+psycopg2-binary = "^2.9.9"
+alembic = "^1.13.2"
 
 [tool.pyright]
 venvPath = "."
