--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,10 @@ pyyaml = "^6.0.2"
 sqlalchemy = "^2.0.32"
 psycopg2-binary = "^2.9.9"
 alembic = "^1.13.2"
+python-multipart = "^0.0.9"
+cachetools = "^5.4.0"
+asyncpg = "^0.29.0"
+greenlet = "^3.0.3"
 
 [tool.pyright]
 venvPath = "."
