--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ python-multipart = "^0.0.9"
 cachetools = "^5.4.0"
 asyncpg = "^0.29.0"
 greenlet = "^3.0.3"
+openpyxl = "^3.1.5"
 
 [tool.pyright]
 venvPath = "."
